<resources>
    <string name="app_name">Task2</string>
    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="office">Office</string>
    <string name="promotions">Promotions</string>
    <string name="radio">Radio</string>
    <string name="recipes">Recipes</string>
    <string name="sports">Sports</string>
    <string name="photo">PHOTO</string>
    <string name="camera">Camera</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="sing_in">Sing in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="just_sing_in">*Just sing in</string>
    <string name="android">Android</string>
    <string name="values_posts_125">125</string>
    <string name="posts">Posts</string>
    <string name="values_followers_20k">20K</string>
    <string name="followers">Followers</string>
    <string name="values_following_22">22</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="website">Website</string>
    <string name="android_course">Android course</string>
    <string name="certificated">Certificated</string>
    <string name="layouts">Layouts</string>
    <string name="views">Views</string>
</resources>