<?xml version="1.0" encoding="utf-8"?>
<!--Task3 RelativeLayout-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginL"
        android:layout_marginTop="@dimen/marginXL"
        android:text="@string/sing_in"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sizeTextL"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_white"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/marginM"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/sizeText"
        android:textStyle="bold"
        android:layout_below="@+id/textViewSingIn"
        android:layout_marginTop="@dimen/marginL"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_white"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="@dimen/marginM"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/sizeText"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_marginTop="@dimen/marginM"
        android:layout_below="@+id/editTextEmail"/>

    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_margin="@dimen/marginL"
        android:text="@string/remember"
        android:textSize="@dimen/sizeTextS" />

    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_margin="@dimen/marginL"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/marginXL"
        android:text="@string/forgot_password"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="@dimen/sizeTextS" />

    <Button
        android:id="@+id/buttonSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/marginXXL"
        android:background="@drawable/rectangle_rounded_black"
        android:padding="@dimen/marginM"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:text="@string/sing_in"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sizeTextL"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|bottom"
        android:text="@string/just_sing_in"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/sizeTextS" />

</RelativeLayout>