<?xml version="1.0" encoding="utf-8"?>
<!--Task2 ConstraintLayout-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/marginM"
        android:contentDescription="@string/camera"
        android:src="@drawable/camera"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPhoto"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPhoto" />

    <EditText
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginL"
        android:gravity="center_vertical"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/sizeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto" />

    <EditText
        android:id="@+id/textInputLayoutPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginL"
        android:gravity="center_vertical"
        android:hint="@string/price"
        android:inputType="text"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/sizeText"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutLocation"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle" />

    <EditText
        android:id="@+id/textInputLayoutLocation"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginL"
        android:layout_marginTop="@dimen/marginL"
        android:layout_marginBottom="@dimen/marginL"
        android:gravity="center_vertical"
        android:hint="@string/location"
        android:inputType="text"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/sizeText"
        app:layout_constraintEnd_toStartOf="@+id/imageViewLocation"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutPrice"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle" />

    <ImageView
        android:id="@+id/imageViewLocation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/marginL"
        android:layout_marginEnd="@dimen/marginM"
        android:contentDescription="@string/location"
        android:src="@drawable/location"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutLocation"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle" />

    <EditText
        android:id="@+id/textInputLayoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginL"
        android:gravity="center_vertical"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/sizeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLocation" />

    <EditText
        android:id="@+id/textInputLayoutInventory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginL"
        android:gravity="center_vertical"
        android:hint="@string/inventory"
        android:inputType="text"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/sizeText"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescription" />

    <EditText
        android:id="@+id/textInputLayoutWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginL"
        android:gravity="center_vertical"
        android:hint="@string/weight"
        android:inputType="text"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/sizeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutInventory"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>